# useless-library

./: CMakeLists.txt  CMakePresets.json  README.md
src/: distilled_set.test.cpp
src/useless/: distilled_set.hpp  distilled_set.test.cpp
